--- a/Changelog
+++ b/Changelog
@@ -1,1 +1,9 @@
+Patch Notes/Changelog
+Major Change.Minor Change.Bug Fix
 
+0.1.0, 3-16-2020:
+  Spent like 3 hours learning how to make drop down menus and made everything resize to fit the screen resolution
+  It doesnt work on browser
+  AHHHHHHHHHHHHHHHHHHHHHHHHHH
+1.0.0, 3/16/2020:
+  Restarting all code except for skeleton.
